--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "21a0ca8d",
+   "id": "64cc3c95",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "13f8f580",
+   "id": "42c5e1c3",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "585477dc",
+   "id": "73892fae",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "263007ee",
+   "id": "638e82ad",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "d3a501f1",
+   "id": "9a622210",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "097242dc",
+   "id": "b0c9f4ca",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "35bdd653",
+   "id": "010b7ad7",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "cf4ad08f",
+   "id": "597a3731",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "84cb6ce0",
+   "id": "3f66fb2f",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f83c05d9",
+   "id": "d01c7d3b",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "871d0d43",
+   "id": "f00f39d9",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "c5b92d61",
+   "id": "e1763703",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "2b243c55",
+   "id": "9ead5f3a",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4fce51f2",
+   "id": "49dbd563",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "2b5c88ac",
+   "id": "50a1f8b8",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "ffcec185",
+   "id": "3758cc02",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "977326e6",
+   "id": "5e6cce5e",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "76fb0da5",
+   "id": "b4dc224a",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "69441f75",
+   "id": "0fd92696",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "b128fd1d",
+   "id": "4c4f4ef1",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "9493a257",
+   "id": "04e3a557",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1e98f10c",
+   "id": "a2f2afc0",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "c3b8e299",
+   "id": "9a8dfd99",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "a6b1fbdf",
+   "id": "8a4c5055",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "bd36a92b",
+   "id": "7dddfc2e",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "a886a8d6",
+   "id": "77d55798",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "f1f00071",
+   "id": "2cd3fd24",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "93a99edb",
+   "id": "1efe8bf2",
    "metadata": {},
    "outputs": [
     {
@@ -933,17 +933,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "22909ee6",
+   "execution_count": 182,
+   "id": "98b076b1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter num1: 123\n",
-      "Enter num2: 10\n",
-      "123 + 10 = 133\n"
+      "Enter num1: 1        2              4          \n",
+      "Enter num2: 6\n",
+      "1        2              4 is not numeric\n"
      ]
     }
    ],
@@ -956,14 +956,14 @@
     "    print(f'{num2} is not numeric')\n",
     "else:\n",
     "    result = int(num1) + int(num2)\n",
-    "    print(f'{num1} + {num2} = {}')\n",
+    "    print(f'{num1} + {num2} = {result}')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7f4144f",
+   "id": "b502b82a",
    "metadata": {},
    "outputs": [],
    "source": []
