--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "445602f7",
+   "id": "e7185a32",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6054e3ea",
+   "id": "16a19104",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7a2ca50c",
+   "id": "f66ecc00",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5dde0823",
+   "id": "09b7de50",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "2f0c6d3f",
+   "id": "b713903e",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "e2b3a92c",
+   "id": "e16f1c3f",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "71fcf213",
+   "id": "ac821239",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c899d3d3",
+   "id": "e9f6b027",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6c0a24b7",
+   "id": "ff4d484c",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "a83caf39",
+   "id": "b5687ea2",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "7dfa4e73",
+   "id": "206d2fe7",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "9e61a23e",
+   "id": "edc81553",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "e31bbc36",
+   "id": "50578866",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "1113b625",
+   "id": "4fc6dc96",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "23f3e96b",
+   "id": "6c55410f",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "dc66981a",
+   "id": "45b11aaa",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "7b43a860",
+   "id": "d4b80fa4",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "c07b7943",
+   "id": "05438e5b",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5b733844",
+   "id": "b26536a2",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "0510c28b",
+   "id": "cf4967bc",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "66456efe",
+   "id": "48bfa3c6",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "b6c57975",
+   "id": "90f18f59",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "3f77e855",
+   "id": "6c58b967",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "6424a71f",
+   "id": "489bb82f",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "9cb69a14",
+   "id": "1b57d918",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "adabd722",
+   "id": "9ccceb15",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "6932439c",
+   "id": "5e087d7b",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "a7bb5abb",
+   "id": "7e7d4c3f",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "6b63a87b",
+   "id": "ee24c72e",
    "metadata": {},
    "outputs": [
     {
@@ -962,16 +962,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "91a5962d",
+   "execution_count": 189,
+   "id": "340aaad5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expression cannot contain assignment, perhaps you meant \"==\"? (2442896316.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[185], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print (x + y = int(x)+int(y))\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expression cannot contain assignment, perhaps you meant \"==\"?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Put in 1 number: 123\n",
+      "Put in a 2nd number: 4\n",
+      "123 + 4 = 127\n"
      ]
     }
    ],
@@ -979,7 +980,7 @@
     "x= input('Put in 1 number: ').strip()\n",
     "y= input('Put in a 2nd number: ').strip()\n",
     "if (x.isdigit() and y.isdigit()):\n",
-    "    print (x + y = int(x)+int(y))\n",
+    "    print (x, '+', y, \"=\", int(x)+int(y))\n",
     "else:\n",
     "    print('Bad input')"
    ]
@@ -987,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c685febe",
+   "id": "4ca7f469",
    "metadata": {},
    "outputs": [],
    "source": []
