--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "id": "fbc0ffaf",
    "metadata": {},
    "outputs": [
@@ -236,9 +236,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please, enter some number: tt\n",
-      "please, enter some number: 66\n",
-      "tt is not numeric\n"
+      "please, enter some number: 44\n",
+      "please, enter some number: 55\n",
+      "44 + 55 = 99\n",
+      "44 - 55 = -11\n"
      ]
     }
    ],
@@ -248,8 +249,12 @@
     "num2 = input('please, enter some number: ').strip()\n",
     "\n",
     "if num1.isdigit() and num2.isdigit():\n",
-    "    result = int(num1) + int(num2)\n",
-    "    print(f'{num1} + {num2} = {result}')\n",
+    "    result_sum = int(num1) + int(num2)\n",
+    "    result_diff = int(num1) - int(num2)\n",
+    "    result_\n",
+    "    \n",
+    "    print(f'{num1} + {num2} = {result_sum}')\n",
+    "    print(f'{num1} - {num2} = {result_diff}')\n",
     "else:\n",
     "    if num1.isdigit():\n",
     "        print(f'{num2} is not numeric')\n",
