--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "id": "fbc0ffaf",
    "metadata": {},
    "outputs": [
@@ -236,10 +236,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please, enter some number: 44\n",
-      "please, enter some number: 55\n",
-      "44 + 55 = 99\n",
-      "44 - 55 = -11\n"
+      "please, enter some number: 3\n",
+      "please, enter some number: 3\n",
+      "3 + 3 = 6\n",
+      "3 - 3 = 0\n",
+      "3 * 3 = 9\n",
+      "3 / 3 = 1.0\n"
      ]
     }
    ],
@@ -251,10 +253,12 @@
     "if num1.isdigit() and num2.isdigit():\n",
     "    result_sum = int(num1) + int(num2)\n",
     "    result_diff = int(num1) - int(num2)\n",
-    "    result_\n",
-    "    \n",
+    "    result_mult = int(num1) * int(num2)\n",
+    "    result_div = int(num1) / int(num2)\n",
     "    print(f'{num1} + {num2} = {result_sum}')\n",
     "    print(f'{num1} - {num2} = {result_diff}')\n",
+    "    print(f'{num1} * {num2} = {result_mult}')\n",
+    "    print(f'{num1} / {num2} = {result_div}.')\n",
     "else:\n",
     "    if num1.isdigit():\n",
     "        print(f'{num2} is not numeric')\n",
