--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -268,8 +268,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "cb7fd332",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 / 3 = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 3\n",
+    "num2 = 3\n",
+    "result_div = num1 // num2\n",
+    "\n",
+    "# Print the result without floating point\n",
+    "print(f'{num1} / {num2} = {result_div}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f519c90",
    "metadata": {},
    "outputs": [],
    "source": []
