--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 93,
    "id": "fbc0ffaf",
    "metadata": {},
    "outputs": [
@@ -236,12 +236,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please, enter some number: 3\n",
-      "please, enter some number: 3\n",
-      "3 + 3 = 6\n",
-      "3 - 3 = 0\n",
-      "3 * 3 = 9\n",
-      "3 / 3 = 1.0\n"
+      "please, enter some number: 5\n",
+      "please, enter some number: 5\n",
+      "5 + 5 = 10\n",
+      "5 - 5 = 0\n",
+      "5 * 5 = 25\n",
+      "5 / 5 = 1\n"
      ]
     }
    ],
@@ -255,11 +255,12 @@
     "    result_diff = int(num1) - int(num2)\n",
     "    result_mult = int(num1) * int(num2)\n",
     "    result_div = int(num1) / int(num2)\n",
-    "        if \n",
+    "    if result_div.is_integer():\n",
+    "        result_div = int(result_div)\n",
     "    print(f'{num1} + {num2} = {result_sum}')\n",
     "    print(f'{num1} - {num2} = {result_diff}')\n",
     "    print(f'{num1} * {num2} = {result_mult}')\n",
-    "    print(f'{num1} / {num2} = {result_div}.')\n",
+    "    print(f'{num1} / {num2} = {result_div}')\n",
     "else:\n",
     "    if num1.isdigit():\n",
     "        print(f'{num2} is not numeric')\n",
@@ -293,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777c85ce",
+   "id": "9a1e2cd9",
    "metadata": {},
    "outputs": [],
    "source": []
