--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -283,18 +283,14 @@
     }
    ],
    "source": [
-    "num1 = 3\n",
-    "num2 = 3\n",
-    "result_div = num1 // num2\n",
-    "\n",
-    "# Print the result without floating point\n",
-    "print(f'{num1} / {num2} = {result_div}')"
+    "num1 = input('Please, enter some number: ').strip()\n",
+    "if num1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a1e2cd9",
+   "id": "5daf325d",
    "metadata": {},
    "outputs": [],
    "source": []
