--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -284,13 +284,14 @@
    ],
    "source": [
     "num1 = input('Please, enter some number: ').strip()\n",
-    "if num1."
+    "if num1.isdigit():\n",
+    "    num1 / 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5daf325d",
+   "id": "08a62303",
    "metadata": {},
    "outputs": [],
    "source": []
