--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1005,8 +1005,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 191,
+   "id": "c57faa13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "59b7c31d",
+   "id": "3151b69a",
    "metadata": {},
    "outputs": [],
    "source": []
