--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 194,
    "id": "4ca7f469",
    "metadata": {},
    "outputs": [
@@ -1000,13 +1000,13 @@
     }
    ],
    "source": [
-    "print (5+3)"
+    "print(5+3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "c57faa13",
+   "id": "9023c2ff",
    "metadata": {},
    "outputs": [
     {
@@ -1023,8 +1023,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 192,
+   "id": "3569b547",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, out there!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, out there!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "b89605b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "0ee780cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello, ' + 'world')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3151b69a",
+   "id": "7fe15bb0",
    "metadata": {},
    "outputs": [],
    "source": []
