--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "9023c2ff",
+   "id": "1b2a85c7",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "3569b547",
+   "id": "1b6db0b1",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "b89605b8",
+   "id": "c746564c",
    "metadata": {},
    "outputs": [
     {
@@ -1059,26 +1059,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "0ee780cd",
+   "execution_count": 196,
+   "id": "1d77b1de",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello, world\n"
+      "hello,world\n"
      ]
     }
    ],
    "source": [
-    "print('hello, ' + 'world')"
+    "print('hello,' + 'world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "23f522a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('5'+'2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "7e514eaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your favourite number is2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Your favourite number is' + '2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe15bb0",
+   "id": "2eb08aca",
    "metadata": {},
    "outputs": [],
    "source": []
