--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "17e29e20",
+   "id": "4173b800",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "22d911f1",
+   "id": "56874ad8",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "da2e2ba7",
+   "id": "341b05ea",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "589cb4b8",
+   "id": "fd6ae1e3",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "722b13dd",
+   "id": "f7e6a362",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "a02417cd",
+   "id": "d95bbe65",
    "metadata": {},
    "outputs": [
     {
@@ -1113,8 +1113,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 210,
+   "id": "d6dc2db2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Jaspreet\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Jaspreet'\n",
+    "print('Hello, ' + name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "e7377c62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaspreet\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "dea26b47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('name')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "05931cbf",
+   "id": "80644844",
    "metadata": {},
    "outputs": [],
    "source": []
