--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "4173b800",
+   "id": "90a2ddbe",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "56874ad8",
+   "id": "f4611a71",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "341b05ea",
+   "id": "6ce76a67",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "fd6ae1e3",
+   "id": "51f63529",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "f7e6a362",
+   "id": "54e23b29",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "d95bbe65",
+   "id": "39207309",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "d6dc2db2",
+   "id": "5b51666b",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "e7377c62",
+   "id": "2e6983d9",
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "dea26b47",
+   "id": "08ddcc5a",
    "metadata": {},
    "outputs": [
     {
@@ -1168,10 +1168,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80644844",
+   "execution_count": 213,
+   "id": "f854c3f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "y=10\n",
+    "print(x+y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "09eba0aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "ca416a2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 'abcd'\n",
+    "type(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a85682ad",
+   "metadata": {},
    "source": []
   }
  ],
