--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "90a2ddbe",
+   "id": "293b2121",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "f4611a71",
+   "id": "ddf12bad",
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "6ce76a67",
+   "id": "2cfc0f59",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "51f63529",
+   "id": "0d85c843",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "54e23b29",
+   "id": "fb768211",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "39207309",
+   "id": "5ec33a71",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "5b51666b",
+   "id": "a5972477",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "2e6983d9",
+   "id": "f269f7b9",
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "08ddcc5a",
+   "id": "5eb027d8",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "f854c3f5",
+   "id": "e102f737",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "09eba0aa",
+   "id": "e3ea1a8f",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "ca416a2e",
+   "id": "d11d4b05",
    "metadata": {},
    "outputs": [
     {
@@ -1231,9 +1231,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a85682ad",
+   "id": "a916ada7",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Type of Variables\n",
+    "- String\n",
+    "- Integer"
+   ]
   }
  ],
  "metadata": {
