--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1236,8 +1236,17 @@
    "source": [
     "# Type of Variables\n",
     "- String\n",
-    "- Integer"
+    "- Integer\n",
+    "`print(x+y)`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87a0eafe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
