--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1242,8 +1242,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 223,
+   "id": "e00615b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Jaspreet!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Jaspreet'\n",
+    "print('Hello, ' + name + '!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "87a0eafe",
+   "id": "91c78911",
    "metadata": {},
    "outputs": [],
    "source": []
