--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "e00615b1",
+   "id": "dd4668df",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c78911",
+   "id": "6103c7ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input('Enter user name: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3657c37",
    "metadata": {},
    "outputs": [],
    "source": []
