--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "dd4668df",
+   "id": "41e7a6b9",
    "metadata": {},
    "outputs": [
     {
@@ -1261,18 +1261,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6103c7ae",
+   "execution_count": 225,
+   "id": "ac0614fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter user name: Jaspreet Singh\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter user name: ')"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 226,
+   "id": "9f02c965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Jaspreet Singh!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello, ' + name + '!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "b7f934f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter 1st Number: 10\n",
+      "Enter 2nd Number: 20\n",
+      "1020\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input('Enter 1st Number: ')\n",
+    "y = input('Enter 2nd Number: ')\n",
+    "print('x'+y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b3657c37",
+   "id": "16d83b68",
    "metadata": {},
    "outputs": [],
    "source": []
