--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "41e7a6b9",
+   "id": "f262cd92",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "ac0614fb",
+   "id": "87873291",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "9f02c965",
+   "id": "93369451",
    "metadata": {},
    "outputs": [
     {
@@ -1297,8 +1297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "b7f934f3",
+   "execution_count": 230,
+   "id": "0d95e400",
    "metadata": {},
    "outputs": [
     {
@@ -1306,21 +1306,21 @@
      "output_type": "stream",
      "text": [
       "Enter 1st Number: 10\n",
-      "Enter 2nd Number: 20\n",
-      "1020\n"
+      "Enter 2nd Number: \n",
+      "int(x) + int(y)\n"
      ]
     }
    ],
    "source": [
     "x = input('Enter 1st Number: ')\n",
     "y = input('Enter 2nd Number: ')\n",
-    "print('x'+y)"
+    "print(f'int(x) + int(y)')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16d83b68",
+   "id": "2e82e1bd",
    "metadata": {},
    "outputs": [],
    "source": []
