--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "f262cd92",
+   "id": "8735907f",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "87873291",
+   "id": "fa3c51ff",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "93369451",
+   "id": "3930990b",
    "metadata": {},
    "outputs": [
     {
@@ -1297,8 +1297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
-   "id": "0d95e400",
+   "execution_count": 231,
+   "id": "40d44e26",
    "metadata": {},
    "outputs": [
     {
@@ -1306,21 +1306,21 @@
      "output_type": "stream",
      "text": [
       "Enter 1st Number: 10\n",
-      "Enter 2nd Number: \n",
-      "int(x) + int(y)\n"
+      "Enter 2nd Number: 20\n",
+      "30\n"
      ]
     }
    ],
    "source": [
     "x = input('Enter 1st Number: ')\n",
     "y = input('Enter 2nd Number: ')\n",
-    "print(f'int(x) + int(y)')"
+    "print(f'{int(x) + int(y)}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e82e1bd",
+   "id": "4f576db8",
    "metadata": {},
    "outputs": [],
    "source": []
